--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/forums/modals.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/forums/modals.scss
@@ -184,6 +184,7 @@
 
 	fieldset {
 		margin-bottom: 0;
+		min-width: 0;
 	}
 
 	.bb-rl-forum-modal-header {
